# beeb

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  docker.secrets.toml  local.secrets.toml  product.secrets.toml  pyproject.toml  run.py
app/: application.py  exceptions.py  models.py
app/migrations/: 0001_models.sql
app/payments_to_upload/: 01.04.2025.csv  01.05.2025.ods
app/repositories/: categories.py  expenses.py  income.py  payments.py  users.py
app/routers/: auth_router.py  categories_router.py  default_page_router.py  dev_router.py  expenses_router.py  income_router.py  payments_router.py  ping_router.py  users_router.py
app/routers/categories/: create.py  read_all.py  read_one.py  update.py
app/routers/expenses/: create.py  delete.py  read_all.py  read_one.py  router.py  total.py  update.py
app/routers/income/: create.py  delete.py  update.py
app/routers/payments/: create.py  delete.py  read_all.py  read_one.py  total.py  update.py
app/routers/users/: create.py
app/schemas/: categories.py  dates.py  expenses.py  income.py  payments.py  users.py
app/settings/: __init__.py  schema.py
app/static/css/: add_button.css  beeb.css  close_modal.css  delete_button.css  material_icons.css
app/templates/: base.html  exception.html  navbar_horizontal.html  navbar_vertical.html
app/templates/modals/: delete_expense.html  delete_payment.html  select_food_non_food.html  signup.html
app/templates/pages/: home_page.html
app/utils/: constants.py  dependencies.py  enums.py  exceptions.py  welcome.py
app/utils/tools/: auth_handler.py  category_helpers.py  config_loader.py  helpers.py
migrations/: 0001_models.sql
tests/: conftest.py  conftest_helpers.py  constants.py  docker-compose.local.individual_test.yml  docker-compose.local.small.yml  docker-compose.local.yml  test.secrets.toml
tests/functional/: conftest.py  docker-compose.local.small.yml  docker-compose.local.yml  test.secrets.toml  test_dev_router.py  test_home_page.py  test_ping.py
tests/functional/categories/: test_create_category.py  test_read_all.py  test_read_one.py  test_update_category.py
tests/functional/expenses/: test_create_expense.py  test_delete_expense.py  test_read.py  test_read_all.py  test_read_one.py  (+2 more)
tests/unit/: conftest.py  conftest_helpers.py
(+135 files in other folders)
