[tool.poetry]
name = "beeb"
version = "0.1.0"
description = ""
authors = ["Anna Veselova <annakartashevamail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
jinja2 = "^3.1.5"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
coverage = "^7.6.10"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.2"
uvicorn = "^0.34.0"
fastapi = "^0.115.7"
ruff = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]