[tool.poetry]
name = "beeb"
version = "0.1.0"
description = ""
authors = ["Anna Kartasheva <annakartashevamail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic-settings = "^2.7.1"
jinja2 = "^3.1.5"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
coverage = "^7.6.10"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.2"
uvicorn = "^0.34.0"
fastapi = "^0.115.7"
ruff = "^0.9.3"
loguru = "^0.7.3"
coloredlogs = "^15.0.1"
jinja2-fragments = "^1.7.0"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
pyexcel-odsr = "^0.6.0"
pydantic = {extras = ["email"], version = "^2.11.4"}
python-jose = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80


[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope="function"